--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 fastapi
-uvicorn
-requests
-python-docx
-PyMuPDF
-unstructured
-faiss-cpu
+uvicorn[standard]
+
+google-cloud-aiplatform
+langchain-google-vertexai
+
 langchain
-langchain-google-genai
 langchain-community
-langchain-ollama
+langchain_google_genai
 langchain-text-splitters
+langchain_groq
+faiss-cpu
+
+
+pypdf
+docx2txt
+unstructured[eml]
+
+
 python-dotenv
-ngrok
+requests
