--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,12 @@
-fastapi
-uvicorn[standard]
-
-google-cloud-aiplatform
 langchain-google-vertexai
-
-langchain
-langchain-community
-langchain_google_genai
-langchain-text-splitters
-langchain_groq
-faiss-cpu
-
-
-pypdf
-pymupdf
-docx2txt
-unstructured[eml]
-
-
+fastapi
+uvicorn
 python-dotenv
 requests
+langchain
+langchain-community
+langchain-google-genai
+vertexai
+PyMuPDF
+docx2txt
+unstructured
